--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </form>
 
 
-    <button class="mt-4 bg-gray-300 p-3 rounded-full shadow-lg">
+    <button class="mt-4 bg-gray-300 p-3 rounded-full shadow-lg focus:outline-none">
       Completar endereço
     </button>
 
